# erp-procee-mining-tkit

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  JOSS_CHECKLIST.md  JOSS_IMPROVEMENTS_SUMMARY.md  LICENSE  QUICK_START_GUIDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: paper.yml  tests.yml
EJISDC/: COVER_LETTER.txt  EJISDC_SUBMISSION_CHECKLIST.md  MANUSCRIPT_INFO.txt  README.md
EJISDC/experiments/: ejisdc_experiments.py  generate_architecture_diagram.py
EJISDC/experiments/ejisdc/: rq1_usability.csv  rq2_quality_statistical.csv  rq3_efficiency.csv  rq4_accessibility.csv
EJISDC/paper/: ejisdc_paper.tex  references.bib  title_page.tex
docs/: RESEARCH_GUIDE.md  conf.py  getting_started.md  index.md  index.rst  requirements.txt
docs/api/: conformance.rst  discovery.rst  eventlog.rst  index.rst  io_erp.rst  statistics.rst  visualization.rst
docs/tutorials/: index.md  o2c_conformance.ipynb  p2p_from_erp_logs.ipynb
examples/: erp_to_eventlog_p2p.py
examples/sample_logs/: README.md
experiments/: comparative_study.py
experiments/results/: latex_tables.tex  rq1_discovery_quality.csv  rq2_preprocessing_effort.csv  rq3_scalability.csv
paper/: COR_ACCEPTANCE_GAPS.md  cor_paper.tex  ieee_paper_draft.tex  paper.bib  paper.md  reference.lib
src/erp_processminer/: __init__.py  cli.py
src/erp_processminer/conformance/: alignments.py  token_replay.py
src/erp_processminer/discovery/: directly_follows.py  heuristics_miner.py  inductive_miner.py
src/erp_processminer/eventlog/: operations.py  serialization.py  structures.py
src/erp_processminer/filters/: attribute_filters.py  performance_filters.py
src/erp_processminer/integration/: bpmn_import_export.py  pm4py_adapter.py
src/erp_processminer/io_erp/: loaders.py  mappings.py  schemas.py
src/erp_processminer/models/: df_graph.py  petri_net.py
src/erp_processminer/statistics/: performance.py  variants.py
src/erp_processminer/visualization/: dashboards.py  graphs.py
tests/: test_conformance_token_replay.py  test_discovery_dfg.py  test_erp_loaders.py  test_eventlog_structures.py  test_heuristics_miner.py  test_mappings_validation.py  test_reproducibility.py  test_visualization_dashboard.py
